hero responsive, client responsive, bottom line height

--- a/iproc-cloud.html
+++ b/iproc-cloud.html
@@ -152,7 +152,7 @@
                         cloud yang fleksibel, aman, dan hemat biaya.
                     </p>
                 </div>
-                <div class="cloud-content relative -bottom-36 ">
+                <div class="cloud-content relative -bottom-36 -mx-4 overflow-x-clip overflow-y-visible">
                     <img src="lib/img/iproc cloud/hero-illustration.png" alt="Cloud System Illustration" class="w-full scale-150 sm:scale-150 md:scale-100"
                         data-aos="zoom-in-down" data-aos-duration="800" />
                 </div>
@@ -359,7 +359,7 @@
         </section>
         <section id="perbandingan" class="hidden-iproc py-24">
             <div class="max-w-screen-2xl mx-auto px-4 sm:px-6 lg:px-8">
-                <img src="./lib/img/Iproc cloud.svg" class="w-72 mb-12 mx-auto" alt="Logo iproc cloud">
+                <img src="./lib/img/Iproc cloud.svg" class="w-48 sm:w-72 mb-12 mx-auto" alt="Logo iproc cloud">
                 <h2 class="text-2xl sm:text-4xl! font-bold text-gray-900 mb-12 text-center sm:text-left">
                     Perbedaan iProc VMS, iProc e-Bidding dan iProc Private Cloud
                 </h2>
@@ -622,14 +622,14 @@
             </div>
         </section>
         <section id="contact" class="bottom px-4 relative overflow-hidden mb-20">
-            <div class="max-w-screen-2xl mx-auto text-center p-15 rounded-4xl">
-                <p class="text-xl md:text-2xl! lg:text-5xl! font-extrabold mx-auto text-white mb-8 max-w-2/3">
+            <div class="max-w-screen-2xl mx-auto text-center p-10 sm:p-15 rounded-4xl">
+                <p class="text-xl md:text-2xl! lg:text-5xl! font-extrabold mx-auto text-white leading-tight mb-8 w-full sm:max-w-2/3">
                     This is the future of e-Procurement.
                     Are you ready to level up?
                 </p>
                 <a href="http://wa.me/6281315870596">
                     <button
-                        class="bg-white inline-flex gap-2 text-[#005bd5] hover:shadow-inner focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-base px-5 py-2.5 text-center cursor-pointer mb-5">
+                        class="bg-white inline-flex gap-2 text-[#005bd5] hover:shadow-inner focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-base px-5 py-2.5 text-center cursor-pointer">
                         <svg class="w-6 h-6 text-[#005db5]" aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
                             width="24" height="24" fill="currentColor" viewBox="0 0 24 24">
                             <path
