--- a/iproc-2-go.html
+++ b/iproc-2-go.html
@@ -368,8 +368,8 @@
             </div>
         </section>
         <section id="contact" class="bottom md:pt-25 relative mb-20 px-4">
-            <div class="max-w-screen-2xl mx-auto text-left p-15 rounded-4xl relative md:pr-[30%]">
-                <p class="text-xl md:text-2xl! lg:text-5xl! font-bold text-white mb-5">
+            <div class="max-w-screen-2xl mx-auto text-left p-10 sm:p-15 rounded-4xl relative md:pr-[30%]">
+                <p class="text-xl md:text-2xl! lg:text-5xl! font-bold text-white leading-tight mb-5">
                     Proses lebih cepat, efisien, dan fleksibel di mana saja dan kapan saja!
                 </p>
                 <p class="text-sm sm:text-base! text-white mb-5">
