gap responsive, change slider responsive code

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
                 <h2 class="text-2xl sm:text-4xl! font-extrabold text-gray-900 text-center">Effortless solutions,
                     impactful
                     outcomes</h2>
-                <div class="mt-16 w-full mx-auto grid grid-cols-12 gap-8">
+                <div class="mt-16 w-full mx-auto grid grid-cols-12 gap-4 sm:gap-8">
                     <div
                         class="col-span-6 sm:col-span-4! flex flex-col justify-center p-5 bg-white rounded-lg overflow-hidden shadow transition hover:scale-105">
                         <div class="flex flex-col md:flex-row gap-6 items-center">
@@ -388,7 +388,7 @@
                 <h2 class="text-2xl sm:text-4xl! font-extrabold text-gray-900 mb-20 text-center">
                     Value-Added Solutions from iProc
                 </h2>
-                <div class="grid grid-cols-2 lg:grid-cols-3 gap-4 sm:gap-9!">
+                <div class="grid grid-cols-2 lg:grid-cols-3 gap-4 sm:gap-8!">
                     <div class="text-left transition hover:scale-105">
                         <svg xmlns="http://www.w3.org/2000/svg" width="90" height="90" viewBox="0 0 90 90" fill="none">
                             <rect width="90" height="90" rx="15" fill="#24A3F2" />
@@ -729,7 +729,7 @@
             <div class="max-w-screen-2xl mx-auto px-4 sm:px-0">
                 <h2 class="text-2xl sm:text-4xl! font-bold text-white text-center">Proven Track Record</h2>
                 <p class="text-sm sm:text-base! text-center text-gray-200 my-6">Hear it From Our Clients</p>
-                <div class="grid grid-cols-12 mx-auto gap-8">
+                <div class="grid grid-cols-12 mx-auto gap-4 sm:gap-8">
                     <div
                         class="col-span-12 lg:col-span-6 xl:col-span-4 flex flex-col rounded-lg bg-white shadow p-6 transition hover:scale-105">
                         <p class="text-sm sm:text-base! text-gray-500 mb-5">"Penerapan aplikasi iProc merupakan bagian
