--- a/iproc-cloud.html
+++ b/iproc-cloud.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html lang="en" prefix="og: https://ogp.me/ns#">
+<html lang="en" prefix="og: https://ogp.me/ns#" class="scroll-smooth">
 
 <head>
     <meta charset="UTF-8" />
