grid gap, suffix size, client show button

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
                 <h2 class="text-2xl sm:text-4xl! font-extrabold text-gray-900 text-center">Effortless solutions,
                     impactful
                     outcomes</h2>
-                <div class="mt-16 w-full mx-auto grid grid-cols-12 gap-4 sm:gap-8">
+                <div class="mt-16 w-full mx-auto grid grid-cols-12 gap-4 sm:gap-8!">
                     <div
                         class="col-span-6 sm:col-span-4! flex flex-col justify-center p-5 bg-white rounded-lg overflow-hidden shadow transition hover:scale-105">
                         <div class="flex flex-col md:flex-row gap-6 items-center">
@@ -249,7 +249,7 @@
                             <div>
                                 <p
                                     class="mb-1 text-xl sm:text-3xl! font-extrabold text-gray-900 text-wrap text-center md:text-left">
-                                    <span class="num " data-val="1920">0000</span> Billion+
+                                    <span class="num " data-val="1920">0000</span> <span class="text-sm sm:text-base">Billion+</span>
                                 </p>
                                 <p class="text-sm sm:text-lg! text-gray-500 text-center md:text-left">Saving Value /
                                     Year</p>
@@ -270,7 +270,7 @@
                             <div>
                                 <p
                                     class="mb-1 text-xl sm:text-3xl! font-extrabold text-gray-900 text-wrap text-center md:text-left">
-                                    <span class="num " data-val="12300">00000</span> Billion+
+                                    <span class="num " data-val="12300">00000</span> <span class="text-sm sm:text-base">Billion+</span>
                                 </p>
                                 <p class="text-sm sm:text-lg! text-gray-500 text-center md:text-left"> PO Values/Year
                                 </p>
@@ -725,7 +725,7 @@
                 </div>
             </div>
         </section>
-        <section id="customer-story" class="testimonial py-22">
+        <section class="testimonial py-22">
             <div class="max-w-screen-2xl mx-auto px-4 sm:px-0">
                 <h2 class="text-2xl sm:text-4xl! font-bold text-white text-center">Proven Track Record</h2>
                 <p class="text-sm sm:text-base! text-center text-gray-200 my-6">Hear it From Our Clients</p>
@@ -1596,7 +1596,7 @@
                     </div>
                 </div>
             </div>
-            <button class="client-toggle text-white mx-auto text-center block mt-5 md:hidden">Show More</button>
+            <button class="client-toggle bg-white px-5 py-2.5 text-[#005db5] mx-auto text-center block mt-5 rounded-lg cursor-pointer hover:bg-gray-100 md:hidden">Show More</button>
         </section>
         <section id="blog" class="award py-22 bg-linear-[180deg,#EEF7FF,#EEF7FF00]">
             <div class="max-w-screen-2xl mx-auto px-4 sm:px-0">
