ubah ke bahasa inggris

--- a/index.html
+++ b/index.html
@@ -249,7 +249,8 @@
                             <div>
                                 <p
                                     class="mb-1 text-xl sm:text-3xl! font-extrabold text-gray-900 text-wrap text-center md:text-left">
-                                    <span class="num " data-val="1920">0000</span> <span class="text-sm sm:text-base">Billion+</span>
+                                    <span class="num " data-val="1920">0000</span> <span
+                                        class="text-sm sm:text-base">Billion+</span>
                                 </p>
                                 <p class="text-sm sm:text-lg! text-gray-500 text-center md:text-left">Saving Value /
                                     Year</p>
@@ -270,7 +271,8 @@
                             <div>
                                 <p
                                     class="mb-1 text-xl sm:text-3xl! font-extrabold text-gray-900 text-wrap text-center md:text-left">
-                                    <span class="num " data-val="12300">00000</span> <span class="text-sm sm:text-base">Billion+</span>
+                                    <span class="num " data-val="12300">00000</span> <span
+                                        class="text-sm sm:text-base">Billion+</span>
                                 </p>
                                 <p class="text-sm sm:text-lg! text-gray-500 text-center md:text-left"> PO Values/Year
                                 </p>
@@ -674,8 +676,9 @@
                                 <p class="text-2xl sm:text-4xl! font-extrabold mt-4">iProc Cloud</p>
 
                                 <ul class="mt-6 space-y-3 text-sm sm:text-base! text-gray-700 text-left mb-4">
-                                    <li>Implementasi eProcurement berbasis cloud yang mendukung kebutuhan organisasi
-                                        yang terus berkembang dan berubah tanpa perlu investasi infrastruktur tambahan.
+                                    <li>Cloud-based eProcurement implementation that supports the evolving and growing
+                                        needs of the organization without requiring additional infrastructure
+                                        investment.
                                     </li>
                                 </ul>
                             </div>
@@ -683,7 +686,7 @@
                             <a href="iproc-cloud.html" class="mt-6">
                                 <button
                                     class="bg-[#005db5] text-sm sm:text-base! text-white px-6 py-2 rounded-lg hover:bg-[#02519B] cursor-pointer">
-                                    Lihat Informasi Lebih Lanjut!
+                                    See More Information!
                                 </button>
                             </a>
                         </div>
@@ -701,23 +704,22 @@
                                 <ul
                                     class="mt-6 space-y-3 text-sm sm:text-base! text-gray-700 text-left mb-4 list-disc pl-4">
                                     <li>
-                                        Mempermudah proses persetujuan Purchase Requisition (PR), barang, vendor, dan
-                                        Request for Quotation (RFQ) langsung dari smartphone Anda.
+                                        Simplifies the approval process for Purchase Requisitions (PR), goods, vendors,
+                                        and Requests for Quotation (RFQ) directly from your smartphone.
                                     </li>
                                     <li>
-                                        Mendukung proses Purchase-to-Pay (P2P) melalui eCatalogue secara praktis dan
-                                        fleksibel.
+                                        Supports the Purchase-to-Pay (P2P) process through eCatalogues in a practical
+                                        and flexible way.
                                     </li>
                                     <li>
-                                        Dilengkapi dengan antarmuka yang ramah pengguna untuk proses pengadaan yang
-                                        lebih efisien.
+                                        Features a user-friendly interface to streamline the procurement process.
                                     </li>
                                 </ul>
                             </div>
                             <a href="iproc-2-go.html" class="mt-6">
                                 <button
                                     class="bg-[#005db5] text-sm sm:text-base! text-white px-6 py-2 rounded-lg hover:bg-[#02519B] cursor-pointer">
-                                    Lihat Informasi Lebih Lanjut!
+                                    See More Information!
                                 </button>
                             </a>
                         </div>
@@ -1596,7 +1598,9 @@
                     </div>
                 </div>
             </div>
-            <button class="client-toggle bg-white px-5 py-2.5 text-[#005db5] mx-auto text-center block mt-5 rounded-lg cursor-pointer hover:bg-gray-100 md:hidden">Show More</button>
+            <button
+                class="client-toggle bg-white px-5 py-2.5 text-[#005db5] mx-auto text-center block mt-5 rounded-lg cursor-pointer hover:bg-gray-100 md:hidden">Show
+                More</button>
         </section>
         <section id="blog" class="award py-22 bg-linear-[180deg,#EEF7FF,#EEF7FF00]">
             <div class="max-w-screen-2xl mx-auto px-4 sm:px-0">
