padding inline our client

--- a/index.html
+++ b/index.html
@@ -231,7 +231,8 @@
                                     class="mb-1 text-xl sm:text-3xl! font-extrabold text-gray-900 text-wrap text-center md:text-left!">
                                     <span class="num text-gray-900" data-val="35">00</span>%+
                                 </p>
-                                <p class="text-sm sm:text-lg! text-gray-500 text-center md:text-left!">Time Reduction</p>
+                                <p class="text-sm sm:text-lg! text-gray-500 text-center md:text-left!">Time Reduction
+                                </p>
                             </div>
                         </div>
                     </div>
@@ -356,7 +357,8 @@
                                     class="mb-1 text-xl sm:text-3xl! font-extrabold text-gray-900 text-wrap text-center md:text-left!">
                                     <span class="num" data-val="210000">0000000</span>+
                                 </p>
-                                <p class="text-sm sm:text-lg! text-gray-500 text-center md:text-left!">Transaction / Year
+                                <p class="text-sm sm:text-lg! text-gray-500 text-center md:text-left!">Transaction /
+                                    Year
                                 </p>
                             </div>
                         </div>
@@ -511,7 +513,7 @@
             <div class="max-w-screen-2xl mx-auto px-8 sm:px-0">
                 <h2 class="text-2xl sm:text-4xl! font-extrabold text-gray-900 mb-8 text-center">Our Key Capabilities
                 </h2>
-                <div class="flex flex-wrap justify-center gap-4 md:gap-6">
+                <div class="flex flex-wrap justify-center gap-4 px-4 md:gap-6">
                     <button
                         class="tab-button px-8 py-2 text-sm font-medium text-white rounded-full focus:outline-none focus:ring-2 focus:ring-blue-400 focus:ring-offset-2 cursor-pointer"
                         data-tab-target="tab-1" style="background-color: #005DB5;">
@@ -1010,7 +1012,7 @@
                 </div>
                 <div class="my-slider w-full ">
                     <div class="client-1 w-full">
-                        <div class="flex flex-wrap justify-center gap-4">
+                        <div class="flex flex-wrap justify-center gap-4 px-4">
                             <div
                                 class="flex justify-center items-center p-4 bg-white shadow rounded-md w-[45%] sm:w-[30%] md:w-[20%] lg:w-[15%]">
                                 <img src="lib/img/iproc-client-vector/bumnd/1.jpg" alt="logo client" class="h-16">
@@ -1139,7 +1141,7 @@
                         </div>
                     </div>
                     <div class="client-2 w-full">
-                        <div class="flex flex-wrap justify-center gap-4">
+                        <div class="flex flex-wrap justify-center gap-4 px-4">
                             <div
                                 class="flex justify-center items-center p-4 bg-white shadow rounded-md w-[45%] sm:w-[30%] md:w-[20%] lg:w-[15%]">
                                 <img src="lib/img/iproc-client-vector/energi dan pertambangan/1.jpg" alt="logo client"
@@ -1269,7 +1271,7 @@
                         </div>
                     </div>
                     <div class="client-3 w-full">
-                        <div class="flex flex-wrap justify-center gap-4">
+                        <div class="flex flex-wrap justify-center gap-4 px-4">
                             <div
                                 class="flex justify-center items-center p-4 bg-white shadow rounded-md w-[45%] sm:w-[30%] md:w-[20%] lg:w-[15%]">
                                 <img src="lib/img/iproc-client-vector/keuangan dan bank/1.jpg" alt="logo client"
@@ -1359,7 +1361,7 @@
                         </div>
                     </div>
                     <div class="client-4 w-full">
-                        <div class="flex flex-wrap justify-center gap-4">
+                        <div class="flex flex-wrap justify-center gap-4 px-4">
                             <div
                                 class="flex justify-center items-center p-4 bg-white shadow rounded-md w-[45%] sm:w-[30%] md:w-[20%] lg:w-[15%]">
                                 <img src="lib/img/iproc-client-vector/manufaktur dan konstruksi/14.jpg"
@@ -1395,7 +1397,7 @@
                         </div>
                     </div>
                     <div class="client-5 w-full">
-                        <div class="flex flex-wrap justify-center gap-4">
+                        <div class="flex flex-wrap justify-center gap-4 px-4">
                             <div
                                 class="flex justify-center items-center p-4 bg-white shadow rounded-md w-[45%] sm:w-[30%] md:w-[20%] lg:w-[15%]">
                                 <img src="lib/img/iproc-client-vector/pemerintah/government (1).png" alt="logo client"
@@ -1500,7 +1502,7 @@
                         </div>
                     </div>
                     <div class="client-6 w-full">
-                        <div class="flex flex-wrap justify-center gap-4">
+                        <div class="flex flex-wrap justify-center gap-4 px-4">
                             <div
                                 class="flex justify-center items-center p-4 bg-white shadow rounded-md w-[45%] sm:w-[30%] md:w-[20%] lg:w-[15%]">
                                 <img src="lib/img/iproc-client-vector/telekomunikasi, transportasi, dan hiburan/1.jpg"
