unminify output css

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <title>iProc - Platform Procurement 4.0 Terintegrasi</title>
     <link rel="shortcut icon" href="lib/img/iproc-icon.png" type="image/x-icon">
     <link href='https://fonts.googleapis.com/css?family=Inter' rel='stylesheet'>
-    <link rel="stylesheet" href="lib/css/output.min.css" defermedia="screen">
+    <link rel="stylesheet" href="lib/css/output.css" defermedia="screen">
     <link rel="stylesheet" href="lib/css/flowbite.min.css">
     <link rel="stylesheet" href="lib/css/style.min.css" defermedia="screen">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.4/tiny-slider.css">
