--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <div class="flex flex-wrap justify-between items-center mx-auto max-w-screen-2xl w-full">
             <div class="p-2 mr-5">
                 <a href="index.html" class="">
-                    <img loading="lazy" src="lib/img/Iproc.png" alt="iProc">
+                    <img loading="lazy" src="lib/img/Iproc.png" alt="iProc" width="90" height="33">
                 </a>
             </div>
 
@@ -221,7 +221,7 @@
                 </div>
                 <img loading="lazy" class="w-[70%] md:max-w-[360px] lg:max-w-[480px] xl:max-w-[580px] rounded-lg"
                     src="lib/img/tablet-iproc.png" alt="iProc Tablet Interface" data-aos="zoom-in-up"
-                    data-aos-duration="800">
+                    data-aos-duration="800" width="580" height="497">
 
             </div>
         </section>
@@ -590,7 +590,7 @@
                     <div id="tab-1" class="tab-content bg-[#24A3F2]! rounded-lg p-10">
                         <div class="flex flex-col lg:flex-row items-center gap-8">
                             <img loading="lazy" src="lib/img/key-1.svg" class="w-[600px]"
-                                alt="Commodity Management Illustration" />
+                                alt="Commodity Management Illustration" width="600" height="350" />
                             <div class="content-tab w-full lg:w-1/2">
                                 <h3 class="text-xl sm:text-3xl! font-bold text-white">Commodity Management</h3>
                                 <p class="text-sm sm:text-base! mt-4 text-white">
@@ -604,7 +604,7 @@
                     <div id="tab-2" class="tab-content bg-[#24A3F2]! rounded-lg p-10 hidden">
                         <div class="flex flex-col lg:flex-row items-center gap-8">
                             <img loading="lazy" src="lib/img/key-2.svg" class="w-[600px]"
-                                alt="Commodity Management Illustration" />
+                                alt="Commodity Management Illustration"  width="600" height="350"/>
                             <div class="content-tab w-full lg:w-1/2">
                                 <h3 class="text-xl sm:text-3xl! font-bold text-white">Vendor Vanagement</h3>
                                 <p class="text-sm sm:text-base! mt-4 text-white">
@@ -618,7 +618,7 @@
                     <div id="tab-3" class="tab-content bg-[#24A3F2]! rounded-lg p-10 hidden">
                         <div class="flex flex-col lg:flex-row items-center gap-8">
                             <img loading="lazy" src="lib/img/key-3.svg" class="w-[600px]"
-                                alt="Vendor Management Illustration" />
+                                alt="Vendor Management Illustration"  width="600" height="350" />
                             <div class="content-tab w-full lg:w-1/2">
                                 <h3 class="text-xl sm:text-3xl! font-bold text-white">Smart Purchasing</h3>
                                 <p class="text-sm sm:text-base! mt-4 text-white">
@@ -635,7 +635,7 @@
                     <div id="tab-4" class="tab-content bg-[#24A3F2]! rounded-lg p-10 hidden">
                         <div class="flex flex-col lg:flex-row items-center gap-8">
                             <img loading="lazy" src="lib/img/key-4.svg" class="w-[600px]"
-                                alt="Commodity Management Illustration" />
+                                alt="Commodity Management Illustration"  width="600" height="350" />
                             <div class="content-tab w-full lg:w-1/2">
                                 <p class="text-xl sm:text-3xl! font-bold text-white">Smart Sourching</p>
                                 <p class="text-sm sm:text-base! mt-4 text-white">
@@ -649,7 +649,7 @@
                     <div id="tab-5" class="tab-content bg-[#24A3F2]! rounded-lg p-10 hidden">
                         <div class="flex flex-col lg:flex-row items-center gap-8">
                             <img loading="lazy" src="lib/img/key-5.svg" class="w-[600px]"
-                                alt="Commodity Management Illustration" />
+                                alt="Commodity Management Illustration"  width="600" height="350" />
                             <div class="content-tab w-full lg:w-1/2">
                                 <p class="text-xl sm:text-3xl! font-bold text-white">Smart Contract</p>
                                 <p class="text-sm sm:text-base! mt-4 text-white">
@@ -666,7 +666,7 @@
                     <div id="tab-6" class="tab-content bg-[#24A3F2]! rounded-lg p-10 hidden">
                         <div class="flex flex-col lg:flex-row items-center gap-8">
                             <img loading="lazy" src="lib/img/key-6.svg" class="w-[600px]"
-                                alt="Commodity Management Illustration" />
+                                alt="Commodity Management Illustration"  width="600" height="350" />
                             <div class="content-tab w-full lg:w-1/2">
                                 <p class="text-xl sm:text-3xl! font-bold text-white">Smart Invoice & Payment</p>
                                 <p class="text-sm sm:text-base! mt-4 text-white">
@@ -680,7 +680,7 @@
                     <div id="tab-7" class="tab-content bg-[#24A3F2]! rounded-lg p-10 hidden">
                         <div class="flex flex-col lg:flex-row items-center gap-8">
                             <img loading="lazy" src="lib/img/key-7.svg" class="w-[600px]"
-                                alt="Iproc Analytics Illustration" />
+                                alt="Iproc Analytics Illustration"  width="600" height="350" />
                             <div class="content-tab w-full lg:w-1/2">
                                 <h3 class="text-xl sm:text-3xl! font-bold text-white">iProc Analytics</h3>
                                 <p class="text-sm sm:text-base! mt-4 text-white">
@@ -712,12 +712,12 @@
                     <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
                         <div class="bg-[#48ACE1] rounded-2xl p-4 overflow-hidden flex items-end relative">
                             <img loading="lazy" src="./lib/img/iproc-cloud.png" class="mx-auto relative -bottom-4 w-4/5"
-                                alt="iProc Cloud" data-aos="fade-up" data-aos-duration="800">
+                                alt="iProc Cloud" data-aos="fade-up" data-aos-duration="800" width="550" height="296">
                         </div>
                         <div class="text-left">
                             <div>
                                 <img loading="lazy" src="lib/img/Iproc cloud.svg" alt="iProc Cloud Logo"
-                                    class="mb-4 w-20" style="width: 120px;">
+                                    class="mb-4 w-20" style="width: 120px;" width="120" height="36">
                                 <p class="text-2xl sm:text-4xl! font-extrabold mt-4">iProc Cloud</p>
 
                                 <ul class="mt-6 space-y-3 text-sm sm:text-base! text-gray-700 text-left mb-4">
@@ -740,12 +740,12 @@
                     <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
                         <div class="bg-[#FFBC50] rounded-2xl p-4 overflow-hidden flex items-end relative">
                             <img loading="lazy" src="./lib/img/iproc-2go.png" class="mx-auto relative -bottom-4 w-4/5"
-                                alt="iProc 2Go" data-aos="fade-up" data-aos-duration="800">
+                                alt="iProc 2Go" data-aos="fade-up" data-aos-duration="800" width="550" height="471">
                         </div>
                         <div class="text-left">
                             <div>
                                 <img loading="lazy" src="lib/img/Iproc 2 go.svg" alt="iProc 2 Go Logo"
-                                    class="mb-4 w-20">
+                                    class="mb-4 w-20" width="80" height="64">
                                 <p class="text-2xl sm:text-4xl! font-extrabold text-gray-900 mt-4">iProc 2 Go!</p>
 
                                 <ul
@@ -789,7 +789,7 @@
                         </p>
                         <div class="flex items-start mt-auto gap-4">
                             <img loading="lazy" class="w-10 rounded-full shadow" src="./lib/img/gilang.png"
-                                alt="gilang avatar">
+                                alt="gilang avatar" width="40" height="40">
                             <div>
                                 <h3 class="text-sm sm:text-base!">Gilang Ramadhan</h3>
                                 <p class="text-xs sm:text-sm! text-gray-500">Expert Associate SCM, BSM, PMO Holding
@@ -809,7 +809,7 @@
                         </p>
                         <div class="flex items-start mt-auto gap-4">
                             <img loading="lazy" class="w-10 rounded-full shadow" src="./lib/img/eddy.png"
-                                alt="eddy avatar">
+                                alt="eddy avatar" width="40" height="40">
                             <div>
                                 <h3 class="text-sm sm:text-base!">Eddy Prastiyo</h3>
                                 <p class="text-xs sm:text-sm! text-gray-500">Vice President of Procurement - PT
@@ -831,7 +831,7 @@
                         </p>
                         <div class="flex items-start mt-auto gap-4">
                             <img loading="lazy" class="w-10 rounded-full shadow" src="./lib/img/jamil.png"
-                                alt="jamil avatar">
+                                alt="jamil avatar" width="40" height="40">
                             <div>
                                 <h3 class="text-sm sm:text-base!">M. Jamil</h3>
                                 <p class="text-xs sm:text-sm! text-gray-500">Director of Commerce - PT Bukit Asam
