--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
     <meta name="twitter:image" content="https://iproc.id/assets/img/og.png">
     <title>iProc - Platform Procurement 4.0 Terintegrasi</title>
     <link rel="shortcut icon" href="lib/img/iproc-icon.png" type="image/x-icon">
-    <link href='https://fonts.googleapis.com/css?family=Inter' rel='stylesheet'>
+    <link href="https://fonts.googleapis.com/css?family=Inter&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="lib/css/output.css" defermedia="screen">
     <link rel="stylesheet" href="lib/css/flowbite.min.css">
-    <link rel="preload" href="lib/css/style.min.css">
+    <link rel="stylesheet" href="lib/css/style.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.4/tiny-slider.css">
     <link
         href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
@@ -582,7 +582,7 @@
                     <div id="tab-2" class="tab-content bg-[#24A3F2]! rounded-lg p-10 hidden">
                         <div class="flex flex-col lg:flex-row items-center gap-8">
                             <img loading="lazy" src="lib/img/key-2.svg" class="w-[600px]"
-                                alt="Commodity Management Illustration"  width="600" height="350"/>
+                                alt="Commodity Management Illustration" width="600" height="350" />
                             <div class="content-tab w-full lg:w-1/2">
                                 <h3 class="text-xl sm:text-3xl! font-bold text-white">Vendor Vanagement</h3>
                                 <p class="text-sm sm:text-base! mt-4 text-white">
@@ -596,7 +596,7 @@
                     <div id="tab-3" class="tab-content bg-[#24A3F2]! rounded-lg p-10 hidden">
                         <div class="flex flex-col lg:flex-row items-center gap-8">
                             <img loading="lazy" src="lib/img/key-3.svg" class="w-[600px]"
-                                alt="Vendor Management Illustration"  width="600" height="350" />
+                                alt="Vendor Management Illustration" width="600" height="350" />
                             <div class="content-tab w-full lg:w-1/2">
                                 <h3 class="text-xl sm:text-3xl! font-bold text-white">Smart Purchasing</h3>
                                 <p class="text-sm sm:text-base! mt-4 text-white">
@@ -613,7 +613,7 @@
                     <div id="tab-4" class="tab-content bg-[#24A3F2]! rounded-lg p-10 hidden">
                         <div class="flex flex-col lg:flex-row items-center gap-8">
                             <img loading="lazy" src="lib/img/key-4.svg" class="w-[600px]"
-                                alt="Commodity Management Illustration"  width="600" height="350" />
+                                alt="Commodity Management Illustration" width="600" height="350" />
                             <div class="content-tab w-full lg:w-1/2">
                                 <p class="text-xl sm:text-3xl! font-bold text-white">Smart Sourching</p>
                                 <p class="text-sm sm:text-base! mt-4 text-white">
@@ -627,7 +627,7 @@
                     <div id="tab-5" class="tab-content bg-[#24A3F2]! rounded-lg p-10 hidden">
                         <div class="flex flex-col lg:flex-row items-center gap-8">
                             <img loading="lazy" src="lib/img/key-5.svg" class="w-[600px]"
-                                alt="Commodity Management Illustration"  width="600" height="350" />
+                                alt="Commodity Management Illustration" width="600" height="350" />
                             <div class="content-tab w-full lg:w-1/2">
                                 <p class="text-xl sm:text-3xl! font-bold text-white">Smart Contract</p>
                                 <p class="text-sm sm:text-base! mt-4 text-white">
@@ -644,7 +644,7 @@
                     <div id="tab-6" class="tab-content bg-[#24A3F2]! rounded-lg p-10 hidden">
                         <div class="flex flex-col lg:flex-row items-center gap-8">
                             <img loading="lazy" src="lib/img/key-6.svg" class="w-[600px]"
-                                alt="Commodity Management Illustration"  width="600" height="350" />
+                                alt="Commodity Management Illustration" width="600" height="350" />
                             <div class="content-tab w-full lg:w-1/2">
                                 <p class="text-xl sm:text-3xl! font-bold text-white">Smart Invoice & Payment</p>
                                 <p class="text-sm sm:text-base! mt-4 text-white">
@@ -658,7 +658,7 @@
                     <div id="tab-7" class="tab-content bg-[#24A3F2]! rounded-lg p-10 hidden">
                         <div class="flex flex-col lg:flex-row items-center gap-8">
                             <img loading="lazy" src="lib/img/key-7.svg" class="w-[600px]"
-                                alt="Iproc Analytics Illustration"  width="600" height="350" />
+                                alt="Iproc Analytics Illustration" width="600" height="350" />
                             <div class="content-tab w-full lg:w-1/2">
                                 <h3 class="text-xl sm:text-3xl! font-bold text-white">iProc Analytics</h3>
                                 <p class="text-sm sm:text-base! mt-4 text-white">
@@ -722,8 +722,8 @@
                         </div>
                         <div class="text-left">
                             <div>
-                                <img loading="lazy" src="lib/img/Iproc 2 go.svg" alt="iProc 2 Go Logo"
-                                    class="mb-4 w-20" width="80" height="64">
+                                <img loading="lazy" src="lib/img/Iproc 2 go.svg" alt="iProc 2 Go Logo" class="mb-4 w-20"
+                                    width="80" height="64">
                                 <p class="text-2xl sm:text-4xl! font-extrabold text-gray-900 mt-4">iProc 2 Go!</p>
 
                                 <ul
