--- a/index.html
+++ b/index.html
@@ -149,8 +149,8 @@
                         An innovative and reliable eProcurement solution designed to help enhance efficiency at every
                         stage of your procurement process.
                 </div>
-                <div class="iframe-wrapper relative -bottom-40 overflow-hidden md:w-[80%] mx-auto px-3 pt-3 md:px-6! md:pt-6! bg-linear-[180deg,#02498D,#015DB54D] rounded-t-4xl"
-                    data-aos="fade-up" data-aos-duration="800">
+                <div
+                    class="iframe-wrapper relative -bottom-40 overflow-hidden md:w-[80%] mx-auto px-3 pt-3 md:px-6! md:pt-6! bg-linear-[180deg,#02498D,#015DB54D] rounded-t-4xl">
                     <!-- <iframe class="w-full rounded-t-3xl md:rounded-t-2xl"
                         src="https://www.youtube.com/embed/ugrnTcuBVZg?si=iYoGTDEeYlXL3tb3" title="YouTube video player"
                         frameborder="0"
@@ -158,8 +158,8 @@
                         referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe> -->
                     <div class="youtube-lazy w-full rounded-t-3xl md:rounded-t-2xl" data-youtube-id="ugrnTcuBVZg"
                         style="position:relative; aspect-ratio:16/9; cursor:pointer; overflow:hidden;">
-                        <img loading="lazy" src="https://img.youtube.com/vi/ugrnTcuBVZg/hqdefault.jpg"
-                            alt="YouTube Thumbnail" style="width:100%;height:100%;object-fit:cover;display:block;">
+                        <img src="https://img.youtube.com/vi/ugrnTcuBVZg/hqdefault.jpg" alt="YouTube Thumbnail"
+                            style="width:100%;height:100%;object-fit:cover;display:block;" width="1130" height="635">
                         <div
                             style="position: absolute;top:0;left:0;right:0;bottom:0;display:flex;align-items:center;justify-content:center;">
                             <!-- Play icon, you can style this as needed -->
