--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
     <link rel="shortcut icon" href="lib/img/iproc-icon.png" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css?family=Inter&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="lib/css/output.css" defermedia="screen">
-    <link rel="stylesheet" href="lib/css/flowbite.min.css">
-    <link rel="stylesheet" href="lib/css/style.min.css">
+    <link rel="stylesheet" href="lib/css/flowbite.min.css" defermedia="screen">
+    <link rel="stylesheet" href="lib/css/style.min.css" defermedia="screen">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.4/tiny-slider.css">
     <link
         href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
