--- a/index.html
+++ b/index.html
@@ -1024,21 +1024,23 @@
             <div class="w-full max-w-screen-2xl mx-auto relative">
                 <h2 class="text-2xl sm:text-4xl! font-bold text-white text-center mb-4">Our Clients</h2>
                 <div id="controls" class="flex justify-center items-center w-full mb-12">
-                    <a class="prev slider-button flex justify-center items-center">
+                    <button class="prev flex justify-center items-center">
                         <svg class="w-4 h-4 -ml-[2px] text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
                             fill="none" viewBox="0 0 8 14">
                             <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                                 d="M7 1 1.3 6.326a.91.91 0 0 0 0 1.348L7 13" />
                         </svg>
-                    </a>
+                        <span class="sr-only">Prev Button</span>
+                    </button>
                     <h3 class="uppercase text-center text-xl text-white client-sector"></h3>
-                    <a class="next slider-button flex justify-center items-center">
+                    <button class="next flex justify-center items-center">
                         <svg class="w-4 h-4 -mr-[2px] text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
                             fill="none" viewBox="0 0 8 14">
                             <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                                 d="m1 13 5.7-5.326a.909.909 0 0 0 0-1.348L1 1" />
                         </svg>
-                    </a>
+                        <span class="sr-only">Next Button</span>
+                    </button>
                 </div>
                 <div class="my-slider w-full ">
                     <div class="client-1 w-full">
@@ -1726,22 +1728,24 @@
                         </div>
                     </div>
                     <div id="award-controls" class="flex justify-center items-center w-full">
-                        <a
+                        <button
                             class="award-prev flex justify-center items-center absolute left-2 md:left-0 top-1/2 -translate-y-1/2">
                             <svg class="w-4 h-4 -ml-[2px] text-white" aria-hidden="true"
                                 xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 8 14">
                                 <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
                                     stroke-width="2" d="M7 1 1.3 6.326a.91.91 0 0 0 0 1.348L7 13" />
                             </svg>
-                        </a>
-                        <a
+                            <span class="sr-only">Prev Button</span>
+                        </button>
+                        <button
                             class="award-next flex justify-center items-center absolute right-2 md:right-0 top-1/2 -translate-y-1/2">
                             <svg class="w-4 h-4 -mr-[2px] text-white" aria-hidden="true"
                                 xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 8 14">
                                 <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
                                     stroke-width="2" d="m1 13 5.7-5.326a.909.909 0 0 0 0-1.348L1 1" />
                             </svg>
-                        </a>
+                            <span class="sr-only">Next Button</span>
+                        </button>
                     </div>
                 </div>
             </div>
